Archive2/76/47714d80a38d80/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:8: error: static_assert failed "explicit ref() required"
    {  static_assert(sizeof(U)==0, "explicit ref() required"); }
       ^             ~~~~~~~~~~~~
main.cpp:35:12: note: in instantiation of function template specialization 'ref_wrapper<int>::ref_wrapper<int>' requested here
    modify(i);
           ^
1 error generated.
